fix:mobile nav shifted by 100% upward

--- a/client/src/Components/Navbar/Navbar.scss
+++ b/client/src/Components/Navbar/Navbar.scss
@@ -210,7 +210,7 @@
 
       .middle {
         position: fixed;
-        top: -100%;
+        top: -200%;
         left: 0;
         width: 100vw;
         min-height: 100vh;
